--- a/transform-to-phenofile.ipynb
+++ b/transform-to-phenofile.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file <- \"sex-height_phenotype_data.csv\""
+    "input_file <- paste0(\"../mounted-data/\",  \"sex-height_phenotype_data.csv\")"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "readr::write_tsv(df, path = paste0(input_file, \"_phenofile.phe\"))"
+    "readr::write_tsv(df, path = \"../example_phenofile.phe\")"
    ]
   }
  ],
